# standardebooks-nix

./: .gitignore  CLAUDE.md  Justfile  Makefile  README.md  flake.nix  pyproject.toml  result
data/: modernize-spelling.tsv
docs/se-manual/: .versions  INDEX.md
docs/se-manual/cli/: README.md  add-file.md  british2american.md  build-ids.md  build-images.md  build-loi.md  build-manifest.md  build-spine.md  build-svg-titles.md  build-title.md  build-toc.md  build.md  clean.md  compare-versions.md  create-draft.md  css-select.md  dec2roman.md  extract-ebook.md  find-mismatched-dashes.md  find-mismatched-diacritics.md  find-unusual-characters.md  help.md  hyphenate.md  interactive-replace.md  lint.md  make-url-safe.md  modernize-spelling.md  prepare-release.md  recompose-epub.md  renumber-endnotes.md  roman2dec.md  semanticate.md  shift-endnotes.md  shift-illustrations.md  split-file.md  titlecase.md  typogrify.md  unicode-names.md  word-count.md  xpath.md
docs/se-manual/contribute/: a-basic-standard-ebooks-source-folder.md  producers.md  producing-an-ebook-step-by-step.md  tips-for-editors-and-proofreaders.md
docs/se-manual/manual/: 1-code-style.md  10-art-and-images.md  (+8 more)
nix/uv/: pyproject.toml
scripts/: build-se-docs.sh  check-se-docs.sh  claude-init.sh  completions.bash  completions.zsh  cover.sh  docs.sh  ext.sh  find-archaic-words.sh  ia-ocr.sh  init.sh  modernize-spelling.sh  ngram.sh  page-scans.sh  preview.sh  se-check-version.sh  se-docs.sh  se-ext.sh  se-list-scripts.sh  search-usage.sh  tag-nationalities.sh
templates/: CLAUDE.md  Justfile  gitignore
(+8 files in other folders)
